--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -55,6 +55,6 @@ jobs:
           run: terraform plan -no-color -input=false -out planfile
           continue-on-error: true
 
-        - name: Terraform apply
+        - name: Terraform plan status
           if: steps.plan.outcome == 'failure'
           run: exit 1
