--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -79,3 +79,34 @@ jobs:
         - name: Install Ingress controller
           if: steps.apple.outcome == 'success' && steps.getconfig.outcome == 'success'
           run: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.1.3/deploy/static/provider/aws/deploy.yaml
+
+    terraform_destroy:
+            name: "Terraform_destroy"
+            if: ${{ github.event.inputs.action == 'Terraform_destroy' }}
+            runs-on: ubuntu-latest
+            defaults:
+              run:
+                working-directory: ${{ github.event.inputs.resource }}
+            steps:
+              - name: Checkout
+                uses: actions/checkout@v2
+        
+              - name: Setup Terraform
+                uses: hashicorp/setup-terraform@v1
+        
+              - name: Terraform Init
+                id: init
+                run: terraform init
+                env:
+                    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                    AWS_DEFAULT_REGION: ${{ env.REGION }}
+              
+              - name: Terraform Destroy
+                id: destroy
+                working-directory: ${{ github.event.inputs.resource }}
+                run: terraform destroy -auto-approve -var-file=variables.tfvars
+                env:
+                    AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                    AWS_DEFAULT_REGION: ${{ env.REGION }}
